fixing install button on ios

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -94,3 +94,7 @@ a:hover {
 .opaque {
   opacity: 0.5;
 }
+
+pwa-install::part(openButton) {
+  display: none;
+}
